plugins {
  id "com.diffplug.spotless" version "6.5.2"
  id 'java'
  id 'application'
  id 'maven-publish'
  id 'com.google.cloud.tools.jib' version '3.2.0'
}

group 'it.unipd.pdp2021'
version '0.1.0'

sourceCompatibility = '17'
targetCompatibility = '17'

description = "Contact Tracing Test Node"

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}

application {
  mainClass = "it.pdp2021.ctnode.Main"
}

repositories {
  mavenCentral()
}

jib {
  from {
    image = 'openjdk:15.0.1-slim'
  }
  to {
    image = 'pdp2021/ctnode'
    tags = ['latest']
  }
  container {
    jvmFlags = ['--enable-preview', '-Xms128m']
    mainClass = 'it.pdp2021.ctnode.Main'
    args = []
    ports = ['47344/udp']
  }
}

spotless {

  format 'misc', {
    target '*.gradle', '.hgignore'

    trimTrailingWhitespace()
    indentWithSpaces()
    endWithNewline()
  }
  java {
    toggleOffOn()

    importOrder()
    removeUnusedImports()

    googleJavaFormat()
  }
}
